Fix mobile horizontal scroll behavior

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,10 @@ h3 {
   display: none;
 }
 
+.smooth-x-scroll {
+  -webkit-overflow-scrolling: touch;
+}
+
 @keyframes fade-up {
   from {
     opacity: 0;
